# cmake_lua

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  dumpbin64.bat  make64.bat  version.cmake
.github/workflows/: cmake-single-platform.yml
lib/: lua53.lib  lua54.lib  lua55.lib
